# gpt-grading

./: .gitignore  LICENSE  README.md  constants.py  gradingprompt_original.txt  main.py  notebook.ipynb  prompt_builder.py  pyproject.toml  read_pdf.py  requirements.txt  utilities.py
essay_grader/: __init__.py  __main__.py  cli.py  grader.py  parsing.py  readers.py  rubric.py
essay_grader/llm/: __init__.py  anthropic.py  base.py  openai.py
examples/: anselm_rubric.md  philosophy_rubric.md
